# sshpad

./: .gitignore  CMakeLists.txt  Makefile  PORTING_UI_IVP.md  README.md  io.github.sshpad.desktop  package.json  remote-migration.md  sshpad.desktop
docs/: PORTING-MACOS.md
packaging/: Info.plist  build-deb.sh  build-dmg.sh
scripts/: build-deb.sh  release.sh
src/: app_context.h  askpass.c  askpass.h  config_manager.c  config_manager.h  config_parser.c  config_parser.h  crypto_store.c  crypto_store.h  http_server.c  http_server.h  local_proxy.c  local_proxy.h  main.c  main_macos.m  port_finder.c  port_finder.h  process_manager.c  process_manager.h  r2_client.c  r2_client.h  sse.c  sse.h  terminal_launch.c  terminal_launch.h  util.c  util.h  window_state.c  window_state.h
ui/: app.js  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
ui/components/: sshpad-app.js  sshpad-card.js  sshpad-forwards.js  sshpad-host-editor.js  sshpad-password.js  sshpad-r2-settings.js  sshpad-status-dot.js  sshpad-toast.js  sshpad-unlock.js  sshpad-wizard.js
ui/libs/: lit-element-base.js  sse-client.js
